--- a/index.html
+++ b/index.html
@@ -15,9 +15,9 @@
     <div id="title">Technical writer, developer ✍️ 💻 ☕️</div>
     <div id="portfolioItems">
         <div id="flexItems">
-            <span id="portolfioItem1"><a href="https://greatghostsss.github.io/gh_getting_going/" target="blank">Getting Going with GitHub</a></span>
-            <span id="portolfioItem2"><a href="https://greatghostsss.github.io/dynamic_navigation-master/" target="blank">Dynamic navigation</a></span>
-            <span id="portolfioItem3">Documentation samples</span>
+            <span id="portfolioItem1"><a href="https://greatghostsss.github.io/gh_getting_going/" target="blank">Getting Going with GitHub</a></span>
+            <span id="portfolioItem2"><a href="https://greatghostsss.github.io/dynamic_navigation-master/" target="blank">Dynamic navigation</a></span>
+            <span id="portfolioItem3">Documentation samples</span>
             <span id="portfolioItem4">Resume</span>
 
 
