removed laggy hovers

--- a/index.html
+++ b/index.html
@@ -24,8 +24,14 @@
         </div>
     </div>
 
-    <div id="itemDescription">
-        <div id="flexDescriptions">
+<!-- Media query width: 800px content:  -->
+
+
+
+
+<div id="itemDescription">
+    <div id="flexDescriptions">
+            <div id="responsiveHeader1">Getting Going with GitHub</div>
             <div id="descriptionContent">
                 <div id="gitArticleDescription">
                     This sample is designed not to show off my design abilities, but to be an example of
@@ -34,7 +40,6 @@
                     down into a conversational and approachable article for myself and others. My favorite kind of
                     writing isn’t stuffy or academic, but inviting and disarming, especially when writing about
                     potentially intimidating concepts.
-                    
                 </div>
                 <div id="navProjectDescription">This is a project I coded when wanting to learn how to build a dynamic
                     menu that responds to where you have scrolled to in a different area of the site. It could still use
