Added mobile functionality

--- a/index.html
+++ b/index.html
@@ -15,8 +15,10 @@
     <div id="title">Technical writer, developer ✍️ 💻 ☕️</div>
     <div id="portfolioItems">
         <div id="flexItems">
-            <span id="portfolioItem1"><a href="https://greatghostsss.github.io/gh_getting_going/" target="blank">Getting Going with GitHub</a></span>
-            <span id="portfolioItem2"><a href="https://greatghostsss.github.io/dynamic_navigation-master/" target="blank">Dynamic navigation</a></span>
+            <span id="portfolioItem1"><a href="https://greatghostsss.github.io/gh_getting_going/" target="blank">Getting
+                    Going with GitHub</a></span>
+            <span id="portfolioItem2"><a href="https://greatghostsss.github.io/dynamic_navigation-master/"
+                    target="blank">Dynamic navigation</a></span>
             <span id="portfolioItem3">Documentation samples</span>
             <span id="portfolioItem4">Resume</span>
 
@@ -24,39 +26,54 @@
         </div>
     </div>
 
-<!-- Media query width: 800px content:  -->
+    <!-- Media query width: 800px content:  -->
 
+    <div id="mobileContent">
 
-
-
-<div id="itemDescription">
-    <div id="flexDescriptions">
-            <div id="responsiveHeader1">Getting Going with GitHub</div>
-            <div id="descriptionContent">
-                <div id="gitArticleDescription">
-                    This sample is designed not to show off my design abilities, but to be an example of
-                    process-oriented writing. This project came about as an extension of me (1) trying to learn
-                    something new, for which there was no good resource online and (2) wanting to break what I learned
-                    down into a conversational and approachable article for myself and others. My favorite kind of
-                    writing isn’t stuffy or academic, but inviting and disarming, especially when writing about
-                    potentially intimidating concepts.
-                </div>
-                <div id="navProjectDescription">This is a project I coded when wanting to learn how to build a dynamic
-                    menu that responds to where you have scrolled to in a different area of the site. It could still use
-                    some work, but it sharpened my JavaScript skills and made me excited about using CSS animations,
-                    media queries, and
-                    <pre id="codeText">::before</pre>, which led to some cool hover effects, especially useful for
-                    tool-tip
-                    features in user documentation.</div>
-                <div id="docSamplesDescription">Email me at erindawson [.] work @ gmail for individual writing samples.</div>
-                <div id="resumeDescription">You'll need a new pair of socks after looking at this resume.</div>
+        <div>Lorem ipsum dolor sit amet consectetur adipisicing elit. Laudantium, perspiciatis. Illum obcaecati, amet
+            reprehenderit, sed itaque, fugit possimus hic nulla odio perspiciatis earum enim <img
+                src="figure8_loRes_ELLIPSE.png" alt="">esse ducimus molestiae nesciunt quis ratione?Laudantium molestias
+            modi architecto eligendi explicabo quod, dignissimos illo et numquam repellat fugit veritatis sapiente
+            facere ipsam, qui voluptas illum autem ipsum. Ut quos suscipit eaque quisquam ratione nulla voluptatem.<div
+                id="cta">Check me out on <a href="https://github.com/GreatGhostsss" target="blank">GitHub</a> or email
+                me at erindawson [.] work @ gmail for writing samples/<div></div>
             </div>
         </div>
     </div>
-    <div id="itemImage">
-        <img id="actualImage" src="githubArticleNoBackground.gif" alt="">
-    </div>
-    <script src="scripts.js"></script>
+
+
+        <div id="itemDescription">
+            <div id="flexDescriptions">
+                <div id="responsiveHeader1">Getting Going with GitHub</div>
+                <div id="descriptionContent">
+                    <div id="gitArticleDescription">
+                        This sample is designed not to show off my design abilities, but to be an example of
+                        process-oriented writing. This project came about as an extension of me (1) trying to learn
+                        something new, for which there was no good resource online and (2) wanting to break what I
+                        learned
+                        down into a conversational and approachable article for myself and others. My favorite kind of
+                        writing isn’t stuffy or academic, but inviting and disarming, especially when writing about
+                        potentially intimidating concepts.
+                    </div>
+                    <div id="navProjectDescription">This is a project I coded when wanting to learn how to build a
+                        dynamic
+                        menu that responds to where you have scrolled to in a different area of the site. It could still
+                        use
+                        some work, but it sharpened my JavaScript skills and made me excited about using CSS animations,
+                        media queries, and
+                        <pre id="codeText">::before</pre>, which led to some cool hover effects, especially useful for
+                        tool-tip
+                        features in user documentation.</div>
+                    <div id="docSamplesDescription">Email me at erindawson [.] work @ gmail for individual writing
+                        samples.</div>
+                    <div id="resumeDescription">You'll need a new pair of socks after looking at this resume.</div>
+                </div>
+            </div>
+        </div>
+        <div id="itemImage">
+            <img id="actualImage" src="githubArticleNoBackground.gif" alt="">
+        </div>
+        <script src="scripts.js"></script>
 </body>
 
 </html>
