Replaced lorem text

--- a/index.html
+++ b/index.html
@@ -30,13 +30,10 @@
 
     <div id="mobileContent">
 
-        <div>Lorem ipsum dolor sit amet consectetur adipisicing elit. Laudantium, perspiciatis. Illum obcaecati, amet
-            reprehenderit, sed itaque, fugit possimus hic nulla odio perspiciatis earum enim <img
-                src="figure8_loRes_ELLIPSE.png" alt="">esse ducimus molestiae nesciunt quis ratione?Laudantium molestias
-            modi architecto eligendi explicabo quod, dignissimos illo et numquam repellat fugit veritatis sapiente
-            facere ipsam, qui voluptas illum autem ipsum. Ut quos suscipit eaque quisquam ratione nulla voluptatem.<div
-                id="cta">Check me out on <a href="https://github.com/GreatGhostsss" target="blank">GitHub</a> or email
-                me at erindawson [.] work @ gmail for writing samples/<div></div>
+        <div>I write things mostly for SAAS companies, including user documentation, procedure writing, and guides. I'm not afraid of going under the technical hood,<img
+            src="figure8_loRes_ELLIPSE.png" alt=""> so to speak—I'm comfortable with modern front-end frameworks and the command line. <div
+                id="cta">Check me out on <a href="https://github.com/GreatGhostsss" target="blank">GitHub</a>, <a href="http://twitter.com/jesuppose" target="blank">Twitter</a>, or email
+                me at erindawson [.] work @ gmail for writing samples.<div></div>
             </div>
         </div>
     </div>
