--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
             <span id="portfolioItem1"><a href="https://greatghostsss.github.io/gh_getting_going/" target="blank">Getting Going with GitHub</a></span>
             <span id="portfolioItem2"><a href="https://greatghostsss.github.io/dynamic_navigation-master/" target="blank">Dynamic navigation</a></span>
             <span id="portfolioItem3">Documentation samples</span>
-            <span id="portfolioItem4"> <a href="resume-dawson.pdf">Resume</a></span>
+            <span id="portfolioItem4"> <a href="resume-dawson.pdf" target="blank">Resume</a></span>
 
 
         </div>
