Added API content

--- a/index.html
+++ b/index.html
@@ -3,14 +3,17 @@
 
 <head>
     <!-- Global site tag (gtag.js) - Google Analytics -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=UA-119035464-2"></script>
-<script>
-  window.dataLayer = window.dataLayer || [];
-  function gtag(){dataLayer.push(arguments);}
-  gtag('js', new Date());
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-119035464-2"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
 
-  gtag('config', 'UA-119035464-2');
-</script>
+        function gtag() {
+            dataLayer.push(arguments);
+        }
+        gtag('js', new Date());
+
+        gtag('config', 'UA-119035464-2');
+    </script>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
@@ -24,10 +27,13 @@
     <div id="title">Technical writer, developer ✍️ 💻 ☕️</div>
     <div id="portfolioItems">
         <div id="flexItems">
-            <span id="portfolioItem1"><a href="https://greatghostsss.github.io/gh_getting_going/" target="blank">Getting Going with GitHub</a></span>
-            <span id="portfolioItem2"><a href="https://greatghostsss.github.io/dynamic_navigation-master/" target="blank">Dynamic navigation</a></span>
+            <span id="portfolioItem1"><a href="https://greatghostsss.github.io/gh_getting_going/" target="blank">Getting
+                    Going with GitHub</a></span>
+            <span id="portfolioItem2"><a href="https://greatghostsss.github.io/dynamic_navigation-master/"
+                    target="blank">Dynamic navigation</a></span>
             <span id="portfolioItem3">Documentation samples</span>
-            <span id="portfolioItem4"> <a href="resume-dawson.pdf" target="blank">Resume</a></span>
+            <span id="portfolioItem4"><a href="https://greatghostsss.github.io/Worknik-API/index.html">API</a></span>
+            <span id="portfolioItem5"> <a href="resume-dawson.pdf" target="blank">Resume</a></span>
 
 
         </div>
@@ -43,7 +49,7 @@
                     down into a conversational and approachable article for myself and others. My favorite kind of
                     writing isn’t stuffy or academic, but inviting and disarming, especially when writing about
                     potentially intimidating concepts.
-                    
+
                 </div>
                 <div id="navProjectDescription">This is a project I coded when wanting to learn how to build a dynamic
                     menu that responds to where you have scrolled to in a different area of the site. It could still use
@@ -52,8 +58,10 @@
                     <pre id="codeText">::before</pre>, which led to some cool hover effects, especially useful for
                     tool-tip
                     features in user documentation.</div>
-                <div id="docSamplesDescription">Email me at erindawson [.] work @ gmail for individual writing samples.</div>
-                <div id="resumeDescription">You'll need a new pair of socks after looking at this resume.</div>
+                <div id="docSamplesDescription">Email me at erindawson [.] work @ gmail for individual writing samples.
+                </div>
+                <div id="resumeDescription">APIs are my friend. <br> <br> Check out this simple-as-can-be web app that
+                    queries the Wordnik API.</div>
             </div>
         </div>
     </div>
