--- a/index.html
+++ b/index.html
@@ -43,16 +43,11 @@
         <div id="flexDescriptions">
             <div id="descriptionContent">
                 <div id="gitArticleDescription">
-                    This sample is designed not to show off my design abilities, but to be an example of
-                    process-oriented writing. This project came about as an extension of me (1) trying to learn
-                    something new, for which there was no good resource online and (2) wanting to break what I learned
-                    down into a conversational and approachable article for myself and others. My favorite kind of
-                    writing isn’t stuffy or academic, but inviting and disarming, especially when writing about
-                    potentially intimidating concepts.
-
+                    A sample of process-oriented writing. Here, I'm (1) learning something, for which there was no good resource online and (2) breaking
+                    down technical concepts into conversational and approachable language.
                 </div>
-                <div id="navProjectDescription">This is a project I coded when wanting to learn how to build a dynamic
-                    menu that responds to where you have scrolled to in a different area of the site. It could still use
+                <div id="navProjectDescription">This is a project I coded when learning how to build a dynamic
+                    menu which responds to where you have scrolled in a different area of the site. It could still use
                     some work, but it sharpened my JavaScript skills and made me excited about using CSS animations,
                     media queries, and
                     <pre id="codeText">::before</pre>, which led to some cool hover effects, especially useful for
