--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 
 <body>
     <div id="name"><a href="http://twitter.com/jesuppose" target="blank" id="nameHyperlink">Erin Dawson</a></div>
-    <div id="title">Technical writer, developer ✍️ 💻 ☕️</div>
+    <div id="title">Technical writer, developing developer ✍️ 💻 ☕️</div>
     <div id="portfolioItems">
         <div id="flexItems">
             <span id="portfolioItem1"><a href="https://greatghostsss.github.io/gh_getting_going/" target="blank">Getting
