--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
                     target="blank">Dynamic navigation</a></span>
             <span id="portfolioItem3">Documentation samples</span>
             <span id="portfolioItem4"><a href="https://greatghostsss.github.io/Worknik-API/index.html">API</a></span>
-            <span id="portfolioItem5"> <a href="resume-dawson.pdf" target="blank">Resume</a></span>
+            <span id="portfolioItem5"> <a href="resume-dawson-1.pdf" target="blank">Resume</a></span>
 
 
         </div>
