updated index and swapped resume for most recent

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                     Going with GitHub</a></span>
             <span id="portfolioItem2"><a href="https://greatghostsss.github.io/dynamic_navigation-master/"
                     target="blank">Dynamic navigation</a></span>
-            <span id="portfolioItem3">Documentation samples</span>
+            <span id="portfolioItem3"><a href="mailto:erindawson.work@gmail.com">Documentation samples</a></span>
             <span id="portfolioItem4"><a href="https://greatghostsss.github.io/Worknik-API/index.html">API</a></span>
             <span id="portfolioItem5"> <a href="resume-dawson-1.pdf" target="blank">Resume</a></span>
 
@@ -43,16 +43,11 @@
         <div id="flexDescriptions">
             <div id="descriptionContent">
                 <div id="gitArticleDescription">
-                    A sample of process-oriented writing. Here, I'm (1) learning something, for which there was no good resource online and (2) breaking
-                    down technical concepts into conversational and approachable language.
+                    A sample of process-oriented writing. Three workflows for beginnig GitHub users who want to
+                    transition from using the GitHub Desktop GUI to the command-line.
                 </div>
-                <div id="navProjectDescription">This is a project I coded when learning how to build a dynamic
-                    menu which responds to where you have scrolled in a different area of the site. It could still use
-                    some work, but it sharpened my JavaScript skills and made me excited about using CSS animations,
-                    media queries, and
-                    <pre id="codeText">::before</pre>, which led to some cool hover effects, especially useful for
-                    tool-tip
-                    features in user documentation.</div>
+                <div id="navProjectDescription">A coding project I built when learning how to build a dynamic
+                    menu which responds to where you have scrolled in a different area of the site.</div>
                 <div id="docSamplesDescription">Email me at erindawson [.] work @ gmail for individual writing samples.
                 </div>
                 <div id="resumeDescription">APIs are my friend. <br> <br> Check out this simple-as-can-be web app that
