added Equip bold again

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
         }
 
         h1 {
-            font-family: 'futura-medium';
+            font-family: 'equip-bold';
             font-size: 3vw;
             margin: 0px;
             padding: 0px;
