emoji are now inline preventing breaking

--- a/index.html
+++ b/index.html
@@ -182,7 +182,7 @@
 <body>
     <div id="container">
         <h1 id="name">Erin Dawson</h1>
-        <h3 id="title">Writer, developing developer ✍️ 💻 ☕️ <br><br>
+        <h3 id="title">Writer, developing developer <span>✍️ 💻 ☕️</span><br><br>
             <div id="icons">
                 <a href="https://github.com/GreatGhostsss" target="blank"><i class="fab fa-github"></a></i>
                 <a href="https://twitter.com/JeSuppose" target="blank"><i class="fab fa-twitter"></a></i> </i><a
@@ -198,7 +198,7 @@
         <div id="resume-content">
             <h4><a href="resume-dawson-1.pdf" target="blank">PDF <i class="fas fa-external-link-alt"></i></a></h4>
             <p>Technical writing samples are difficult to share due to the nature of NDA. </p>
-            <p>I've listed a handul here, but the best way to know me is to start a conversation. Message me at
+            <p>I've listed a handful here, but the best way to know me is to start a conversation. Message me at
                 erindawson.work [@] gmail.com.</p>
             <hr>
         </div>
@@ -217,7 +217,7 @@
                 result of my collaboration as a technical writer with the back-end engineers.</p>
             <h4><a href="https://greatghostsss.github.io/gh_getting_going/" target="blank">Getting Going with GitHub <i
                         class="fas fa-external-link-alt"></i></a></h4>
-            <p>A sample of process-oriented writing. Here, I'm learning something, for which there was no good
+            <p>A sample of process-oriented writing. Here, I'm learning something for which there was no good
                 conversational and approachable language.</p>
             <hr>
         </div>
@@ -235,10 +235,6 @@
                 scrolled in a different area of the site. It could still use some work, but it sharpened my JavaScript
                 skills and made me excited about using CSS animations, media queries, and ::before, which led to some
                 cool hover effects, especially useful for tool-tip features in user documentation.
-            </p>
-            <h4><a href="https://greatghostsss.github.io/gh_getting_going/" target="blank"></a></h4>
-            <p>A sample of process-oriented writing. Here, I'm (1) learning something, for which there was no good
-                resource online and (2) breaking down technical concepts into conversational and approachable language.
             </p>
             <hr>
         </div>
