--- a/index.html
+++ b/index.html
@@ -42,6 +42,10 @@
             color: black;
         }
 
+        span {
+            display: inline-block;
+        }
+
         h1 {
             font-family: 'equip-bold';
             font-size: 3vw;
