--- a/index.html
+++ b/index.html
@@ -261,6 +261,8 @@
         <div id="personal-content">
             <h4><a href="https://erindawson.bandcamp.com/" target="blank">Music <i
                         class="fas fa-external-link-alt"></i></a></h4>
+            <h4><a href="https://medium.com/@erindawson.work" target="blank">Blog <i
+                        class="fas fa-external-link-alt"></i></a></h4>
             <h4><a href="https://www.baristamagazine.com/soundtrack-coffeeshop/" target="blank">Barista Magazine <i
                         class="fas fa-external-link-alt"></i></a></h4>
             <h4><a href="https://www.amazon.com/Roderick-Line-Guide-Erin-Dawson-ebook/dp/B07BCTRXWY"
