Updated summary if GitHub article

--- a/index.html
+++ b/index.html
@@ -235,8 +235,8 @@
                 result of my collaboration as a technical writer with the back-end engineers.</p>
             <h4><a href="https://greatghostsss.github.io/gh_getting_going/" target="blank">Getting Going with GitHub <i
                         class="fas fa-external-link-alt"></i></a></h4>
-            <p>A sample of process-oriented writing. Here, I'm learning something for which there was no good
-                conversational and approachable language.</p>
+            <p>A sample of process-oriented writing. Here, I've written something for which there were no articles tackling command-line workflows using 
+                conversational or approachable language.</p>
             <hr>
         </div>
         <div id="development">
