Wordnik hyperlink correction

--- a/index.html
+++ b/index.html
@@ -243,7 +243,7 @@
             <h2>Development</h2>
         </div>
         <div id="development-content">
-            <h4><a href="https://greatghostsss.github.io/Worknik-API/index.html" target="blank">Wordnik API App<i
+            <h4><a href="https://greatghostsss.github.io/Wordnik-API/index.html" target="blank">Wordnik API App<i
                         class="fas fa-external-link-alt"></i></a></h4>
             <p>APIs are my friend.</p>
             <p>Check out this simple-as-can-be web app that queries the Wordnik API.</p>
